<resources>
    <string name="app_name">mybbshop</string>
    <string name="network_error">Network error...Try again</string>
    <string name="Password">password</string>
    <string name="Username">username</string>
    <string name="notaccount">Create Account ? Signup</string>
    <string name="Login">Login</string>
    <string name="back">Back to Login page</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_bbhome">BBHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="service">Service</string>
    <string name="experties">Experts</string>
    <string name="profile">Profile</string>
    <string name="timeSlot">TimeSlot</string>
</resources>
